#7. Update version to 0.7.0, implement features for task management including lunch hour exclusion, enhance GanttChart with dynamic label width, and introduce trash functionality for deleted logs.

--- a/docs/features/2.DailyRecord.md
+++ b/docs/features/2.DailyRecord.md
@@ -81,8 +81,8 @@ interface TimerLog {
 
 아래 기능들은 현재 기획 단계이거나 개발 예정입니다.
 
-- **[ ] 날짜 이동**: 현재는 '오늘' 날짜만 기록 가능합니다. 과거 날짜 조회 및 수정 기능이 필요합니다.
-- **[ ] 점심시간 제외**: 점심시간(예: 12:00~13:00)을 총 소요 시간 계산에서 자동으로 제외하는 로직.
-- **[ ] 휴지통**: 삭제한 작업을 임시 보관하고 복구하는 기능.
-- **[ ] 간트차트 수정**: 간트차트 막대를 드래그하여 시간을 수정(Resize, Move)하는 기능.
+- **[x] 날짜 이동**: ~~현재는 '오늘' 날짜만 기록 가능합니다.~~ 과거 날짜 조회 및 수정 기능 구현 완료 (v0.6.0)
+- **[x] 점심시간 제외**: ~~점심시간(예: 12:00~13:00)을 총 소요 시간 계산에서 자동으로 제외하는 로직.~~ 구현 완료 (v0.7.0)
+- **[x] 휴지통**: ~~삭제한 작업을 임시 보관하고 복구하는 기능.~~ 구현 완료 (v0.7.0)
+- **[x] 간트차트 수정**: ~~간트차트 막대를 드래그하여 시간을 수정(Resize, Move)하는 기능.~~ 구현 완료 (v0.6.0)
 - **[ ] 작업 완료 처리**: 그룹 단위로 작업을 '완료' 처리하여 더 이상 재시작하지 않도록 표시하는 기능.
