--- a/docs/features/5.Board.md
+++ b/docs/features/5.Board.md
@@ -1,19 +1,34 @@
-# 건의사항 게시판
+# 건의사항 게시판 (Feedback Board)
 
-> **현재 준비 중인 기능입니다.**
-
-건의사항 게시판은 앱 개선 아이디어나 버그 리포트를 작성하는 공간입니다.
-서버 없이 로컬 환경에서 동작하므로, 실제 개발자에게 전송되는 기능은 추후 구현될 예정입니다.
-
-## 예정 기능
-
-- **익명 글쓰기**: 별도 로그인 없이 닉네임으로 작성
-- **비밀번호 관리**: 게시글 수정/삭제를 위한 비밀번호 설정
-- **댓글**: 게시글에 대한 댓글 작성
+> 사용자 의견 및 버그 리포트를 위한 익명 게시판입니다.
+> 현재 버전에서는 **LocalStorage**를 사용하여 데이터를 브라우저 내부에 저장합니다.
 
 ---
 
-## [TODO] 구현 계획
+## 주요 기능
 
-- **[ ] 게시판 UI**: 글쓰기 폼, 게시글 목록, 상세 보기 화면 구현
-- **[ ] 로컬 저장소 활용**: 작성된 글을 LocalStorage에 저장하여 개인 메모장처럼 활용하거나, 메일 보내기 기능으로 연동 고려.
+### 1. 게시글 작성
+- **익명성 보장**: 별도의 회원가입이나 로그인 없이 이용 가능합니다.
+- **입력 항목**: 닉네임(선택), 제목, 내용, 비밀번호, 카테고리(아이디어/버그/기타)
+- **비밀번호**: 게시글 수정 및 삭제 시 본인 확인을 위해 사용됩니다 (간단한 해시 처리).
+
+### 2. 게시글 목록 및 상세 보기
+- **목록**: 최신순 정렬, 카테고리 칩 표시
+- **상세 보기**: 게시글 본문 및 작성일, 수정일 표시
+
+### 3. 수정 및 삭제
+- 작성 시 입력한 비밀번호를 입력해야 수정 또는 삭제가 가능합니다.
+- 비밀번호가 일치하지 않으면 오류 메시지를 표시합니다.
+
+### 4. 댓글 기능
+- 각 게시글에 댓글을 작성할 수 있습니다.
+- 댓글 작성 시에도 닉네임과 비밀번호를 설정하여, 추후 댓글 삭제 시 본인 확인을 거칩니다.
+- 댓글 삭제 기능 지원
+
+---
+
+## 데이터 저장 방식
+
+- 모든 데이터는 브라우저의 `LocalStorage` (`timekeeper-feedback-posts` 키)에 JSON 형태로 저장됩니다.
+- **주의**: 브라우저 캐시를 비우거나 시크릿 모드를 사용하면 데이터가 초기화될 수 있습니다.
+- 실제 서버와 통신하지 않으므로, 데이터는 해당 기기/브라우저에만 존재합니다.
