`0.10.4` Implement Firebase Firestore integration for the Feedback Board, transitioning from LocalStorage to a shared cloud-based system. Enhance user experience with real-time updates, improved UI elements such as a refresh button and comment count display, and streamline error handling. Update documentation to reflect these changes and provide migration guidance for existing users.

--- a/docs/features/2.DailyRecord.md
+++ b/docs/features/2.DailyRecord.md
@@ -10,7 +10,17 @@
 - **시각화**: 작업 내역이 시간대별 막대(Bar)로 표시됩니다. 카테고리별로 색상이 구분됩니다.
 - **실시간 표시**: 현재 시간 위치에 빨간색 선이 표시되며, 진행 중인 작업은 종료 시간이 실시간으로 늘어납니다.
 - **드래그로 추가**: 빈 영역을 드래그하면 해당 시간대에 **수동으로 작업을 추가**할 수 있습니다. (예: 회의 등 타이머를 못 켠 경우)
+  - 단순 클릭 시 기본 1시간 작업이 생성됩니다.
+  - 기존 작업 행에서 드래그하면 해당 작업에 세션을 추가할 수 있습니다.
 - **정보 확인**: 막대에 마우스를 올리면 상세 시간과 소요 시간이 표시됩니다.
+- **작업 수정**: 막대를 **더블클릭**하면 수정 모달이 열립니다. **우클릭**하면 수정/삭제 메뉴가 표시됩니다.
+- **시간 조절 (리사이즈)**: 완료된 작업 막대의 양끝을 드래그하여 시작/종료 시간을 조절할 수 있습니다. 진행 중인 작업은 시작 시간만 조절 가능합니다.
+
+### 충돌 알림 (v0.10.4)
+작업 시간이 겹칠 경우 **비차단 알림(Snackbar)**이 화면 상단에 표시됩니다.
+- 경미한 겹침(5분 이내)은 **자동 조정**되며, "시간 충돌로 인해 자동 조정되었습니다" 알림이 표시됩니다.
+- 심각한 겹침은 **겹침을 허용**하고 "시간이 겹치는 작업이 있습니다" 경고 알림이 표시됩니다.
+- 이전 버전의 confirm 대화상자가 제거되어 작업 흐름이 끊기지 않습니다.
 
 ---
 
