--- a/docs/features/5.Board.md
+++ b/docs/features/5.Board.md
@@ -1,7 +1,7 @@
 # 건의사항 게시판 (Feedback Board)
 
-> 사용자 의견 및 버그 리포트를 위한 익명 게시판입니다.
-> 현재 버전에서는 **LocalStorage**를 사용하여 데이터를 브라우저 내부에 저장합니다.
+> 사용자 의견 및 버그 리포트를 위한 **공용 익명 게시판**입니다.
+> v0.10.4부터 **Firebase Firestore**를 사용하여 모든 사용자가 게시글을 공유합니다.
 
 ---
 
@@ -13,8 +13,9 @@
 - **비밀번호**: 게시글 수정 및 삭제 시 본인 확인을 위해 사용됩니다 (간단한 해시 처리).
 
 ### 2. 게시글 목록 및 상세 보기
-- **목록**: 최신순 정렬, 카테고리 칩 표시
+- **목록**: 최신순 정렬, 카테고리 칩 표시, 댓글 수 표시
 - **상세 보기**: 게시글 본문 및 작성일, 수정일 표시
+- **새로고침**: 목록 우측 새로고침 버튼으로 최신 게시글 동기화
 
 ### 3. 수정 및 삭제
 - 작성 시 입력한 비밀번호를 입력해야 수정 또는 삭제가 가능합니다.
@@ -29,6 +30,74 @@
 
 ## 데이터 저장 방식
 
-- 모든 데이터는 브라우저의 `LocalStorage` (`timekeeper-feedback-posts` 키)에 JSON 형태로 저장됩니다.
-- **주의**: 브라우저 캐시를 비우거나 시크릿 모드를 사용하면 데이터가 초기화될 수 있습니다.
-- 실제 서버와 통신하지 않으므로, 데이터는 해당 기기/브라우저에만 존재합니다.
+### v0.10.4 이후: Firebase Firestore (클라우드)
+
+| 항목 | 내용 |
+|---|---|
+| **저장소** | Firebase Firestore (실시간 클라우드 DB) |
+| **컬렉션** | `feedback_posts` |
+| **공유 범위** | 모든 사용자가 게시글 공유 |
+| **실시간 동기화** | 새로고침 버튼으로 최신 데이터 조회 |
+
+### 데이터 구조
+
+```typescript
+interface FeedbackPost {
+  id: string;           // 문서 ID (자동 생성)
+  nickname: string;     // 작성자 닉네임
+  title: string;        // 제목
+  content: string;      // 내용
+  password_hash: string;// 비밀번호 해시
+  category: 'idea' | 'bug' | 'etc'; // 카테고리
+  created_at: number;   // 생성 시간 (timestamp)
+  updated_at: number;   // 수정 시간 (timestamp)
+  comments: Comment[];  // 댓글 배열
+}
+
+interface Comment {
+  id: string;           // 댓글 ID
+  nickname: string;     // 댓글 작성자
+  content: string;      // 댓글 내용
+  password_hash: string;// 비밀번호 해시
+  created_at: number;   // 작성 시간
+}
+```
+
+---
+
+## UI 개선사항 (v0.10.4)
+
+| 기능 | 설명 |
+|---|---|
+| **로딩 상태** | 게시글 로드 중 스피너 및 메시지 표시 |
+| **저장 상태** | 등록/수정/삭제 중 버튼에 로딩 인디케이터 표시 |
+| **새로고침 버튼** | 목록 상단에 새로고침 아이콘 버튼 추가 |
+| **댓글 수 표시** | 목록에서 각 게시글의 댓글 수 `[N]` 형태로 표시 |
+| **에러 처리** | 네트워크 오류 시 스낵바로 에러 메시지 표시 |
+
+---
+
+## 환경 설정 (개발자용)
+
+Firebase 연동을 위해 프로젝트 루트에 `.env` 파일이 필요합니다:
+
+```bash
+VITE_FIREBASE_API_KEY=your_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+VITE_FIREBASE_APP_ID=1:123456789:web:abcdef
+```
+
+> `.env` 파일은 `.gitignore`에 포함되어 있어 저장소에 커밋되지 않습니다.
+> `.env.example` 파일을 참고하여 설정하세요.
+
+---
+
+## 변경 이력
+
+| 버전 | 변경 내용 |
+|---|---|
+| v0.9.0 | 건의사항 게시판 최초 구현 (LocalStorage) |
+| v0.10.4 | Firebase Firestore 연동으로 공용 게시판 전환 |
