--- a/docs/guides/v0.10.4-guide.md
+++ b/docs/guides/v0.10.4-guide.md
@@ -1,130 +1,92 @@
 # TimeKeeper v0.10.4 사용설명서
 
 ## 목차
-1. [새로운 기능](#1-새로운-기능)
-2. [카테고리 인라인 관리](#2-카테고리-인라인-관리)
-3. [진행상태 커스터마이징](#3-진행상태-커스터마이징)
-4. [인라인 편집 기능](#4-인라인-편집-기능)
-5. [자동완성 항목 삭제](#5-자동완성-항목-삭제)
-6. [기타 개선사항](#6-기타-개선사항)
+1. [업데이트 요약](#1-업데이트-요약)
+2. [건의사항 게시판 사용법](#2-건의사항-게시판-사용법)
+3. [자주 묻는 질문](#3-자주-묻는-질문)
 
 ---
 
-## 1. 새로운 기능
+## 1. 업데이트 요약
 
-v0.10.4에서는 사용자 편의성을 크게 개선했습니다:
+v0.10.4에서는 **건의사항 게시판**이 공용 게시판으로 업그레이드되었습니다.
 
-- **카테고리 인라인 관리**: 드롭다운에서 바로 카테고리 추가/삭제
-- **진행상태 커스터마이징**: 나만의 진행상태 추가 가능
-- **인라인 편집**: 클릭 한 번으로 기록명, 프로젝트 코드 수정
-- **자동완성 관리**: 불필요한 자동완성 항목 삭제
+### 주요 변경사항
 
----
-
-## 2. 카테고리 인라인 관리
-
-### 사용 방법
-
-1. **카테고리 드롭다운 클릭**
-2. **기존 카테고리 선택** 또는
-3. **하단의 "새 카테고리" 입력란에 입력 후 추가 버튼 클릭**
-4. **각 카테고리 옆 X 버튼으로 삭제**
-
-### 적용 위치
-- 타이머 입력 영역
-- 기록 수정 모달
-- 간트 차트 작업 생성/수정
-- 프리셋 추가/수정
-- 설정 페이지
+| 변경 전 (v0.10.3 이하) | 변경 후 (v0.10.4) |
+|---|---|
+| 내 브라우저에서만 보임 | 모든 사용자가 공유 |
+| 브라우저 캐시 삭제 시 데이터 손실 | 클라우드에 영구 저장 |
+| 오프라인에서도 사용 가능 | 인터넷 연결 필요 |
 
 ---
 
-## 3. 진행상태 커스터마이징
+## 2. 건의사항 게시판 사용법
 
-### 기본 진행상태
-- 완료
-- 진행중
-- 대기
-- 보류
+### 2.1 게시판 접속
+1. 상단 네비게이션 바에서 **건의사항** 클릭
+2. 게시글 목록이 표시됩니다
 
-### 새 진행상태 추가 방법
+### 2.2 글쓰기
+1. 우측 상단 **글쓰기** 버튼 클릭
+2. 카테고리 선택 (아이디어 / 버그 / 기타)
+3. 닉네임 입력 (선택, 미입력 시 "익명")
+4. 제목 입력 (필수)
+5. 내용 입력 (필수)
+6. 비밀번호 입력 (필수, 수정/삭제 시 필요)
+7. **등록하기** 클릭
 
-**방법 1: 주간일정에서 직접 추가**
-1. 주간일정 페이지로 이동
-2. 프로젝트의 진행상태 드롭다운 클릭
-3. 하단 입력란에 새 상태 입력
-4. Enter 또는 + 버튼 클릭
+### 2.3 게시글 보기
+1. 목록에서 게시글 클릭
+2. 본문 및 댓글 확인
+3. 좌측 상단 **목록으로** 버튼으로 돌아가기
 
-**방법 2: 설정에서 관리**
-1. 설정 페이지로 이동
-2. "진행상태 관리" 섹션 찾기
-3. 표시명 입력 후 추가 버튼 클릭
-4. 필요 시 "기본값으로 초기화" 클릭
+### 2.4 수정 및 삭제
+1. 상세 화면에서 **수정(✏️)** 또는 **삭제(🗑️)** 아이콘 클릭
+2. 작성 시 입력한 비밀번호 입력
+3. 확인 버튼 클릭
 
----
+### 2.5 댓글 달기
+1. 상세 화면 하단 댓글 영역으로 이동
+2. 닉네임 입력 (선택)
+3. 비밀번호 입력 (필수, 삭제 시 필요)
+4. 댓글 내용 입력
+5. **댓글 등록** 클릭
 
-## 4. 인라인 편집 기능
-
-### 기록명 편집
-1. **기록 목록에서 기록명 클릭**
-2. **텍스트 필드가 나타남**
-3. **수정 후 Enter 또는 포커스 아웃**
-
-### 프로젝트 코드 편집
-1. **프로젝트 코드 Chip 클릭**
-2. **Autocomplete 드롭다운 표시**
-3. **기존 프로젝트 선택 또는 직접 입력**
-
-### 상세 수정 (모달)
-- 기록 행 우측의 **연필 아이콘** 클릭
-- 시작/종료 시간, 카테고리 등 상세 정보 수정
+### 2.6 새로고침
+- 목록 화면에서 새로고침 버튼(🔄)을 클릭하면 최신 게시글을 불러옵니다
+- 다른 사용자가 새로 작성한 글을 확인할 수 있습니다
 
 ---
 
-## 5. 자동완성 항목 삭제
+## 3. 자주 묻는 질문
 
-### 기록명 자동완성 삭제
-1. 기록명 입력란 클릭하여 자동완성 목록 표시
-2. 삭제할 항목 옆 X 버튼 클릭
-3. 해당 항목은 더 이상 자동완성에 표시되지 않음
-4. **참고**: 실제 기록 데이터는 삭제되지 않음
+### Q1. 이전에 작성한 게시글이 사라졌어요
+v0.10.4 이전 버전에서 작성한 게시글은 브라우저 LocalStorage에 저장되어 있었습니다. 새 버전은 Firebase 클라우드를 사용하므로, 기존 게시글은 자동으로 이전되지 않습니다. 필요한 내용은 다시 작성해주세요.
 
-### 프로젝트 자동완성 삭제
-1. 프로젝트 코드/명 입력란 클릭
-2. 삭제할 프로젝트 옆 X 버튼 클릭
-3. **주의**: 프로젝트가 저장 목록에서 영구 삭제됨
+### Q2. 게시글이 안 보여요 / 로딩이 안 돼요
+1. 인터넷 연결 상태를 확인해주세요
+2. 페이지를 새로고침(F5) 해보세요
+3. 새로고침 버튼(🔄)을 클릭해보세요
 
----
+### Q3. 비밀번호를 잊어버렸어요
+비밀번호는 복구할 수 없습니다. 해당 게시글/댓글의 수정 및 삭제가 불가능합니다.
 
-## 6. 기타 개선사항
+### Q4. 게시글을 수정하면 비밀번호도 바뀌나요?
+아니요, 비밀번호는 최초 작성 시 설정한 값이 유지됩니다.
 
-### UI 개선
-- **간트 차트 프로젝트명**: 긴 이름은 말줄임표(...) 처리
-- **버튼 순서 변경**: 완료 버튼이 가장 왼쪽에 배치
-- **Footer 안내 문구**: 데이터 저장 방식 안내 추가
+### Q5. 다른 사람의 글이 보여요
+정상입니다! v0.10.4부터 건의사항 게시판은 모든 사용자가 공유하는 공용 게시판입니다. 다른 사용자의 아이디어나 버그 리포트를 확인하고, 댓글로 소통할 수 있습니다.
 
-### 데이터 저장 안내
-> 모든 기록은 내 컴퓨터(브라우저)에 저장되며, 서버로 전송되지 않습니다.
-> 저장 공간이 부족할 경우 오래된 데이터부터 자동 삭제될 수 있습니다.
-
----
-
-## FAQ
-
-### Q: 삭제한 카테고리를 복구할 수 있나요?
-A: 설정 페이지에서 "기본값으로 초기화" 버튼을 클릭하면 기본 카테고리로 복구됩니다.
-
-### Q: 자동완성에서 제외한 기록명을 다시 표시할 수 있나요?
-A: 현재 버전에서는 불가능합니다. 같은 제목으로 새 기록을 생성하면 다시 표시됩니다.
-
-### Q: 프로젝트를 삭제하면 관련 기록도 삭제되나요?
-A: 아니요. 프로젝트 목록에서만 삭제되며, 기존 기록의 프로젝트 코드는 유지됩니다.
+### Q6. 부적절한 게시글을 발견했어요
+현재 버전에서는 관리자 기능이 없습니다. 추후 업데이트에서 신고 기능을 추가할 예정입니다.
 
 ---
 
 ## 변경 이력
 
 | 버전 | 날짜 | 주요 변경 |
-|------|------|---------|
-| v0.10.4 | 2026-01-27 | 카테고리/진행상태 인라인 관리, 인라인 편집, 자동완성 삭제 |
-| v0.10.0 | 2026-01-20 | 주간일정 복사 형식 개선 |
+|---|---|---|
+| v0.10.4 | 2026-01-27 | 건의사항 Firebase 연동, 공용 게시판 전환 |
+| v0.10.0 | 2026-01-26 | 간트차트 우클릭 메뉴, 테마 개편 |
+| v0.9.0 | - | 건의사항 게시판 최초 구현 |
