--- a/docs/features/6.Settings.md
+++ b/docs/features/6.Settings.md
@@ -2,19 +2,70 @@
 
 설정 페이지에서는 앱의 테마, 업무 환경, 그리고 가장 중요한 **데이터 관리**를 수행할 수 있습니다.
 
-## 1. 테마 커스터마이징
+## 1. 테마 및 컬러 팔레트
 
 앱의 전체적인 색상 테마를 변경할 수 있습니다.
 
-- **테마 프리셋**: 검정(기본), 초록, 보라, 빨강, 주황, 청록, 파랑 등 미리 정의된 색상 테마 선택
-- **커스텀 색상**: 원하는 색상의 HEX 코드를 직접 입력하여 적용
+### 1.1 프리셋 팔레트
+
+Coolors 스타일의 9가지 프리셋 팔레트 중 선택할 수 있습니다:
+- 네이비 & 오렌지 (기본)
+- 올리브 & 노랑
+- 파스텔 레인보우
+- 오션 블루
+- 선셋
+- 포레스트
+- 베이지 & 브라운
+- 핑크 & 퍼플
+- 테라코타
+
+### 1.2 커스텀 팔레트
+
+기본 색상을 선택하면 **톤온톤 팔레트**가 자동 생성됩니다.
+- 생성된 각 색상을 클릭하여 개별 수정 가능
+- 최대 15개의 색상까지 추가 가능
+
+### 1.3 다크모드 색상 자동 보정 (v0.10.5)
+
+다크모드에서는 **테마색이 자동으로 밝기 보정**됩니다:
+- 너무 어두운 색상(밝기 45% 미만)은 자동으로 밝게 조정
+- 색조(Hue)는 유지하면서 가시성만 개선
+- 모든 테마색 사용처에서 일관되게 적용:
+  - 팔레트 미리보기
+  - 간트 차트 작업 색상
+  - 프리셋 패널 색상
+  - 탭 버튼 및 MUI 컴포넌트 색상
 
 ## 2. 업무 환경 설정
 
-- **점심시간**: 점심시간 시작/종료 시간을 설정합니다. (추후 시간 계산 제외 로직에 사용됨)
+- **점심시간**: 점심시간 시작/종료 시간을 설정합니다. 작업 시간 계산에서 자동 제외됩니다.
 - **자동 완성**: 작업명 입력 시 자동 완성 기능 사용 여부를 설정합니다.
 
-## 3. 데이터 관리 (중요)
+### 단축키 안내
+
+설정 페이지에서 사용 가능한 단축키 목록을 확인할 수 있습니다:
+- `F8`: 새 작업 추가 팝업
+- `Enter`: 타이머 시작 (입력창 포커스 시)
+- `Alt + N`: 입력창 포커스
+- `Alt + S`: 타이머 일시정지/재개
+- `Alt + 1`: 일간 타이머 페이지
+- `Alt + 2`: 주간 일정 페이지
+- `Alt + T`: 오늘로 이동
+
+## 3. 카테고리 관리
+
+업무 기록에 사용할 카테고리를 관리합니다:
+- 새 카테고리 추가
+- 기존 카테고리 삭제
+- 기본값으로 초기화
+
+## 4. 진행상태 관리
+
+주간일정에서 사용할 진행상태를 관리합니다:
+- 표시명과 값(value) 설정
+- 기본값으로 초기화
+
+## 5. 데이터 관리 (중요)
 
 이 앱은 서버 없이 브라우저에만 데이터를 저장하므로, **데이터 백업이 매우 중요합니다.**
 
@@ -29,9 +80,13 @@
 - **기능**: 백업해둔 JSON 파일을 불러와 데이터를 복원합니다.
 - **주의**: 가져오기를 실행하면 **현재 브라우저에 저장된 기존 데이터는 모두 덮어씌워집니다.** 필요한 경우 현재 데이터를 먼저 내보내기 하세요.
 
+### 모든 데이터 초기화
+- 모든 작업 기록, 설정, 프리셋, 게시글을 삭제합니다.
+- "초기화"를 입력해야 실행됩니다.
+- **이 작업은 되돌릴 수 없습니다.**
+
 ---
 
 ## [TODO] 미구현 기능
 
-- **[ ] 단축키 설정**: 단축키 목록을 확인하고 사용자 정의 키로 변경하는 기능.
-- **[ ] 초기화**: 앱 데이터를 공장 초기화 상태로 되돌리는 기능.
+- **[ ] 단축키 설정**: 사용자 정의 단축키 변경 기능.
