--- a/docs/features/2.DailyRecord.md
+++ b/docs/features/2.DailyRecord.md
@@ -87,6 +87,81 @@ interface TimerLog {
 
 ---
 
+## 5. 타이머 상태 정의
+
+타이머(세션)는 아래 4가지 상태 중 하나를 가집니다. 각 상태의 의미와 전환 조건을 명확히 정의합니다.
+
+### 상태 종류
+
+| 상태 | 설명 | UI 표시 | endTime 설정 여부 |
+|------|------|---------|-------------------|
+| `IDLE` | 초기 상태 (타이머 시작 전) | - | X |
+| `RUNNING` | 작업 진행 중 | "진행 중" 칩(Chip) | X |
+| `PAUSED` | 일시정지 상태 | 종료 시간(주황색) | O |
+| `COMPLETED` | 작업 완료 | 종료 시간(기본색) | O |
+
+### 일시정지(PAUSED) 상태 정의
+
+**일시정지**는 현재 진행 중인 작업을 임시로 멈춘 상태입니다. 다음과 같은 상황에서 발생합니다:
+
+1. **명시적 일시정지**: 사용자가 활성 타이머의 일시정지 버튼을 클릭
+2. **새 작업 시작**: 진행 중인 작업이 있는 상태에서 새 작업을 시작하면, 기존 작업은 자동으로 PAUSED 상태로 전환되어 logs에 저장
+3. **단축키 사용**: `Alt + S` 단축키로 타이머 일시정지/재개
+
+#### 일시정지 시 기록되는 시간
+
+| 필드 | 의미 | 용도 |
+|------|------|------|
+| `lastPausedAt` | 마지막으로 일시정지한 시각 | UI에서 종료 시간 표시 |
+| `endTime` | 세션 종료 시각 | 소요 시간 계산, 간트차트 렌더링 |
+| `pausedDuration` | 누적 일시정지 시간(초) | 순수 작업 시간 계산 시 제외 |
+
+#### 종료 시간 표시 우선순위 (UI)
+
+PAUSED 상태에서 종료 시간을 표시할 때 다음 우선순위로 값을 선택합니다:
+
+```
+1. lastPausedAt (가장 최근 일시정지 시각)
+2. endTime (세션 종료 시각)
+3. startTime (폴백 - 시작 시각)
+```
+
+이 우선순위는 기존 데이터 호환성을 위해 설정되었습니다.
+
+### PAUSED vs COMPLETED 차이
+
+| 구분 | PAUSED | COMPLETED |
+|------|--------|-----------|
+| **의미** | 임시 중단 (재개 가능) | 작업 완료 (재개 불가) |
+| **재개** | O (activeTimer로 복귀 가능) | X (새 세션으로만 시작) |
+| **UI 색상** | 주황색 (warning) | 기본색 |
+| **사용 시나리오** | 잠시 쉬거나 다른 작업 전환 | 해당 작업 완전 종료 |
+
+### 상태 전환 다이어그램
+
+```
+        [시작]
+           │
+           ▼
+      ┌─────────┐
+      │  IDLE   │
+      └────┬────┘
+           │ startTimer()
+           ▼
+      ┌─────────┐  pauseTimer()   ┌─────────┐
+      │ RUNNING │ ───────────────▶│ PAUSED  │
+      └────┬────┘                 └────┬────┘
+           │                           │
+           │ completeTimer()           │ resumeTimer()
+           │                           │
+           ▼                           ▼
+      ┌─────────┐                 ┌─────────┐
+      │COMPLETED│                 │ RUNNING │
+      └─────────┘                 └─────────┘
+```
+
+---
+
 ## [TODO] 미구현 기능 (Future Features)
 
 아래 기능들은 현재 기획 단계이거나 개발 예정입니다.
