Add timekeeper backup JSON file and improve duration calculation handling
- Introduced a new backup JSON file for timekeeper data, including logs and settings.
- Updated duration calculation logic in ActiveTimer and timeUtils to handle cases where pausedDuration exceeds total duration, treating such instances as invalid data.
- Enhanced test cases to reflect changes in duration calculation behavior, ensuring accurate results in edge cases.

--- a/docs/features/2.DailyRecord.md
+++ b/docs/features/2.DailyRecord.md
@@ -81,9 +81,32 @@ interface TimerLog {
   startTime: number;   // 시작 시간 (Timestamp)
   endTime?: number;    // 종료 시간 (Timestamp)
   status: 'RUNNING' | 'PAUSED' | 'COMPLETED'; // 상태
-  pausedDuration: number; // 일시정지 시간 합계
+  pausedDuration: number; // 일시정지 시간 합계 (초)
 }
 ```
+
+### 소요시간 계산 로직
+
+소요시간은 다음과 같이 계산됩니다:
+
+```
+소요시간 = (종료시간 - 시작시간) - 점심시간 - 일시정지시간
+```
+
+#### 비정상 데이터 처리 (v0.12.4)
+
+일시정지시간(`pausedDuration`)이 전체 작업시간보다 클 경우 비정상 데이터로 간주하여 무시합니다:
+
+```typescript
+// pausedDuration이 전체 duration보다 크면 비정상 데이터로 무시
+const safePaused = pausedDuration > durationSec ? 0 : pausedDuration;
+const result = durationSec - safePaused;
+```
+
+| 상황 | pausedDuration | 전체 duration | 처리 | 결과 |
+|------|---------------|---------------|------|------|
+| 정상 | 10분 | 60분 | 그대로 사용 | 50분 |
+| 비정상 | 28분 | 24분 | 무시 (0으로 처리) | 24분 |
 
 ---
 
