--- a/docs/features/6.Settings.md
+++ b/docs/features/6.Settings.md
@@ -42,6 +42,11 @@ Coolors 스타일의 9가지 프리셋 팔레트 중 선택할 수 있습니다:
 - **점심시간**: 점심시간 시작/종료 시간을 설정합니다. 작업 시간 계산에서 자동 제외됩니다.
 - **자동 완성**: 작업명 입력 시 자동 완성 기능 사용 여부를 설정합니다.
 
+### 2.1 배포 캘린더 표시 주 수
+
+- **배포 캘린더** 섹션에서 한 번에 표시할 주 수(1주 / 2주 / 3주 / 4주)를 선택할 수 있습니다.
+- 선택한 값은 자동 저장되며, 배포 캘린더 탭에 즉시 반영됩니다.
+
 ### 단축키 안내
 
 설정 페이지에서 사용 가능한 단축키 목록을 확인할 수 있습니다:
