--- a/docs/features/8.DeployCalendar.md
+++ b/docs/features/8.DeployCalendar.md
@@ -9,14 +9,17 @@
 
 ## 2. 화면 구성
 
-- **기본 표시**: 오늘 기준 **저번주 ~ 이번주** 2주 (월~금)
+- **기본 표시**: 오늘 기준으로 선택한 **주 수**만큼 표시 (월~금). 기본값 2주(저번주~이번주).
+- **표시 주 수 설정**: **설정 > 배포 캘린더**에서 1주 / 2주 / 3주 / 4주 중 선택 가능. 자동 저장.
 - **주차 표시**: 예) "2026년 2월 1주차 ~ 2주차"
 - **네비게이션**: 이전 주 / 다음 주 / 이번 주로 이동
 
 ## 3. 이벤트 관리
 
 - **추가**: 빈 셀 클릭 → 날짜, 프로젝트 코드(자동완성), 표시명, 진행상태, 휴일 여부 입력
-- **수정/삭제**: 이벤트 셀 클릭 → 모달에서 수정 또는 삭제
+- **수정/삭제**: 이벤트 셀 클릭 → 모달에서 수정 또는 삭제. 모달에서 **Enter** 키로 저장 가능.
+- **우클릭 삭제**: 이벤트 칩에서 우클릭 → 컨텍스트 메뉴에서 "삭제" 선택 시 해당 이벤트만 삭제
+- **드래그앤드롭**: 이벤트 칩을 다른 날짜 셀로 드래그하여 일자 이동
 - **휴일**: 휴일 체크 시 해당 셀에 빨간색 텍스트로 표시 (예: 신정, 연차)
 
 ## 4. 잡 색상 설정
