`0.14.2` Update timekeeper backup and enhance calendar export functionality
- Updated active timer details in the timekeeper backup JSON file, including a new title and project code.
- Added multiple completed event logs to the backup, improving historical data tracking.
- Modified the calendar export utility to ensure fixed column widths and improved HTML structure for better compatibility with web editors.
- Enhanced the JobColorManager component to include a default color palette for job settings, improving user experience in color selection.
- Implemented keyboard handling in the DeployEventModal for better accessibility and usability.

--- a/docs/features/8.DeployCalendar.md
+++ b/docs/features/8.DeployCalendar.md
@@ -17,7 +17,7 @@
 ## 3. 이벤트 관리
 
 - **추가**: 빈 셀 클릭 → 날짜, 프로젝트 코드(자동완성), 표시명, 진행상태, 휴일 여부 입력
-- **수정/삭제**: 이벤트 셀 클릭 → 모달에서 수정 또는 삭제. 모달에서 **Enter** 키로 저장 가능.
+- **수정/삭제**: 이벤트 셀 클릭 → 모달에서 수정 또는 삭제. 모달에서 **Enter** 키로 저장 가능. 모달에서 잡 색상(기본·테마·직접 선택) 편집 가능.
 - **우클릭 삭제**: 이벤트 칩에서 우클릭 → 컨텍스트 메뉴에서 "삭제" 선택 시 해당 이벤트만 삭제
 - **드래그앤드롭**: 이벤트 칩을 다른 날짜 셀로 드래그하여 일자 이동
 - **휴일**: 휴일 체크 시 해당 셀에 빨간색 텍스트로 표시 (예: 신정, 연차)
@@ -26,13 +26,21 @@
 
 - **잡 색상 설정** 버튼으로 다이얼로그 열기
 - 잡(프로젝트 코드)별로 배경색 지정
-- **기본 색상**: 설정 > 컬러 팔레트에서 선택한 테마 색상을 사용 (다크모드 시 자동 보정)
-- 프리셋 그리드 + 컬러피커로 커스텀 색상 선택 가능
+- **기본 색상**: 8색 파스텔 구역 + **테마 색상**: 설정 > 컬러 팔레트 테마 (다크모드 시 자동 보정)
+- 컬러피커로 직접 선택 가능
 
-## 5. HTML 복사
+## 5. HTML 복사 (v0.14.2~)
 
-- **HTML 복사** 버튼 클릭 시 현재 표시된 2주 캘린더를 HTML 테이블로 클립보드에 복사
-- ecount 웹에디터, Notion, Excel 등에 붙여넣기 시 스타일(배경색, 휴일 빨간색) 유지
+- **HTML 복사** 버튼 클릭 시 현재 표시된 주 수만큼 캘린더를 HTML 테이블로 클립보드에 복사
+- ecount 웹에디터, Notion, Excel 등에 붙여넣기 시 아래 스타일이 유지됨
+
+### 내보내기 스타일
+
+- **전체**: 얇은 회색 테두리, 둥근 모서리(8px), 고정 너비(835px), colgroup으로 열 너비 유지
+- **날짜 헤더**: 옅은 회색 배경(#f3f4f6), 가운데 정렬, 고정 높이(36px), 상하 패딩
+- **바디 셀**: 흰 배경, 최소 높이 72px, 칸·라벨 좌우 패딩
+- **작업 라벨**: 잡별 배경색(td bgcolor + 인라인 스타일), 둥근 모서리(6px), 패딩(8px 12px 10px 12px), 라벨 간 margin(6px), 긴 텍스트 말줄임표
+- **휴일**: 빨간색(#ca3626) 텍스트, 가운데 정렬
 
 ## 6. 데이터
 
