--- a/docs/features/8.DeployCalendar.md
+++ b/docs/features/8.DeployCalendar.md
@@ -32,6 +32,7 @@
 ## 5. HTML 복사 (v0.14.2~)
 
 - **HTML 복사** 버튼 클릭 시 현재 표시된 주 수만큼 캘린더를 HTML 테이블로 클립보드에 복사
+- 복사되는 내용은 **table 요소 및 하위 요소만** (최상위 wrapper div 제외)
 - ecount 웹에디터, Notion, Excel 등에 붙여넣기 시 아래 스타일이 유지됨
 
 ### 내보내기 스타일
