--- a/docs/features/4.Weekly.md
+++ b/docs/features/4.Weekly.md
@@ -1,44 +1,32 @@
-# 주간 일정 (리포트)
+# 주간 일정
 
-주간 일정 페이지는 기록된 업무 내역을 기간별로 조회하고, 보고서 작성을 위한 통계 데이터를 제공합니다.
+주간 일정 페이지는 기록된 업무 내역을 **주 단위**로 조회하고, 복사 미리보기를 통해 보고서·문서 작성에 활용할 수 있는 텍스트/HTML을 제공합니다.
 
-## 1. 기간 필터
+## 1. 주 단위 이동
 
-상단 필터 버튼을 통해 조회할 기간을 선택할 수 있습니다.
+- **이전 주 / 다음 주**: 버튼으로 조회할 주를 변경합니다.
+- **이번 주**: 현재 주가 아닐 때만 표시되며, 클릭 시 이번 주로 이동합니다.
+- 선택된 주의 **월요일 ~ 일요일** 기준으로 해당 주에 기록된 로그가 집계됩니다.
 
-| 옵션 | 설명 |
-|---|---|
-| **오늘** | 당일(00:00~24:00) 기록만 조회 |
-| **이번 주** | 이번 주 월요일 ~ 일요일 기록 조회 |
-| **이번 달** | 이번 달 1일 ~ 말일 기록 조회 |
-| **직접 지정** | 시작일과 종료일을 사용자가 직접 선택 |
+## 2. 데이터 표시
 
-## 2. 데이터 집계 및 표시
+- **필터**: 전체 보기 또는 특정 프로젝트 제외 후 집계할 수 있습니다.
+- **일별·프로젝트별 그룹**: 날짜 → 프로젝트(잡) → 업무 목록으로 계층 표시됩니다.
+- **진행상태**: 일·프로젝트 단위로 진행중/완료를 오버라이드할 수 있으며, 복사 시 반영됩니다.
 
-선택한 기간 내의 모든 작업 기록(LocalStorage 데이터)을 분석하여 다음과 같이 표시합니다.
+## 3. 복사 미리보기 및 복사
 
-### 요약 카드
-- **총 업무 시간**: 선택된 기간 동안의 총 작업 시간을 '분' 단위와 'HH:MM' 형식으로 표시합니다.
+- **복사 형식** (미리보기 상단 토글):
+  - **간단형**: 텍스트만. 잡 라인 아래 업무목록에 들여쓰기(공백 2칸 + `>`)가 적용됩니다.
+  - **상세형**: HTML+평문 복사. 잡 라벨에는 배경색을 적용하지 않고, 진행상태·시작일자·누적시간 등 메타 정보를 함께 표시합니다.
+  - **라벨형**: HTML+평문 복사. 잡 라벨에 색상을 적용한 테이블 셀 형태로 붙여넣기 시 색상이 유지됩니다.
+- **복사 버튼**: 헤더의 "복사"와 미리보기 영역의 "복사" 모두 선택한 형식으로 클립보드에 복사합니다.
+- **잡 색상 설정**: **라벨형**을 선택했을 때만 미리보기 하단에 "잡 색상 설정" 버튼이 노출됩니다. 클릭 시 해당 주에 등장한 잡 + localStorage에 있는 모든 프로젝트(배포 캘린더에 없는 잡 포함)에 대해 색상을 설정할 수 있으며, 배포 캘린더와 동일 스토어를 사용해 색상이 동기화됩니다.
 
-### 상세 테이블
-작업을 **게시판 번호** 기준으로 그룹화하여 보여줍니다.
+## 4. (참고) 기간별 리포트·CSV
 
-| 컬럼 | 설명 |
-|---|---|
-| **게시판 번호** | 작업의 그룹 키 (없으면 '미지정') |
-| **업무 개수** | 해당 그룹에 속한 작업 세션 수 |
-| **총 소요 시간** | 해당 그룹의 누적 작업 시간 |
-| **포함된 업무** | 그룹에 포함된 작업명(Title) 목록 요약 |
-
-## 3. 데이터 내보내기
-
-- **CSV 다운로드**: 조회된 통계 데이터를 CSV 파일(`time_report_YYYY-MM-DD.csv`)로 다운로드할 수 있습니다. 엑셀에서 열어 주간 보고서 작성 시 활용할 수 있습니다.
-
----
+- 기간 필터(오늘/이번 주/이번 달/직접 지정) 및 CSV 다운로드는 다른 리포트/통계 화면에서 제공될 수 있습니다. 주간 일정 페이지는 주 단위 + 복사 미리보기 중심으로 동작합니다.
 
 ## [TODO] 미구현 기능
 
-- **[ ] 주간 단위 이동**: '이전 주', '다음 주' 버튼으로 주 단위 탐색 기능.
-- **[ ] 복사 템플릿**: 텍스트 형식(상세형/요약형)으로 클립보드에 복사하는 기능.
-- **[ ] 진행 상태 관리**: 주간 단위로 작업의 진행 상태(진행중/완료)를 별도로 관리하는 기능.
 - **[ ] 시각화**: 주간 업무 비중을 보여주는 파이 차트나 막대 그래프.
