Update version to `0.14.4` and fix session addition behavior in GanttChart
- Incremented version to `0.14.4`.
- Updated the GanttChart component to ensure that dragging a row correctly adds a session based on the clicked row, addressing an issue where multiple rows could cause misalignment.
- Enhanced the documentation to reflect the changes in session addition behavior.
- Added a test case to verify the correct functionality of session addition when dragging rows in the GanttChart.

--- a/docs/features/2.DailyRecord.md
+++ b/docs/features/2.DailyRecord.md
@@ -12,6 +12,7 @@
 - **드래그로 추가**: 빈 영역을 드래그하면 해당 시간대에 **수동으로 작업을 추가**할 수 있습니다. (예: 회의 등 타이머를 못 켠 경우)
   - 단순 클릭 시 기본 1시간 작업이 생성됩니다.
   - 기존 작업 행에서 드래그하면 해당 작업에 세션을 추가할 수 있습니다.
+  - (v0.14.4) 클릭한 행을 기준으로 세션이 추가되며, 여러 줄이 있어도 한 줄 밀리는 현상이 수정되었습니다.
 - **정보 확인**: 막대에 마우스를 올리면 상세 시간과 소요 시간이 표시됩니다.
 - **작업 수정**: 막대를 **더블클릭**하면 수정 모달이 열립니다. **우클릭**하면 수정/삭제 메뉴가 표시됩니다.
 - **시간 조절 (리사이즈)**: 완료된 작업 막대의 양끝을 드래그하여 시작/종료 시간을 조절할 수 있습니다. 진행 중인 작업은 시작 시간만 조절 가능합니다.
